fix spacing on grid

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     display: grid;
     border-bottom: 1px solid #999;
     border-left: 1px solid #999;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .buttons > div {
